--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -2,6 +2,10 @@ name: test-deployment
 
 on:
  push:
+
+permissions:
+      id-token: write
+      contents: read
  
 jobs:
   test:
@@ -40,3 +44,25 @@ jobs:
           push: true
           context: .
           tags: kreativechat01/github:v1
+  deploy-azure:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: 'Run Azure CLI commands'
+        run: |
+          az containerapp up \
+            --name my-container-app \
+            --resource-group my-container-apps \
+            --location centralus \
+            --environment 'my-container-apps' \
+            --image kreativechat01/github:v1 \
+            --target-port 80 \
+            --ingress external \
+            --query properties.configuration.ingress.fqdn
